@@ -178,12 +178,21 @@ TclCreateSocketAddress(
     }
 
     hints.ai_socktype = SOCK_STREAM;
+#if 0
+    /*
+     * We found some problems when using AI_ADDRCONFIG, e.g. on systems that
+     * have no networking besides the loopback interface and want to resolve
+     * localhost. See bugs 3385024, 3382419, 3382431. As the advantage of
+     * using AI_ADDRCONFIG in situations where it works, is probably low,
+     * we'll leave it out for now. After all, it is just an optimisation.
+     */
 #if defined(AI_ADDRCONFIG) && !defined(_AIX) && !defined(__hpux)
     /*
      * Missing on: OpenBSD, NetBSD.
      * Causes failure when used on AIX 5.1 and HP-UX
      */
     hints.ai_flags |= AI_ADDRCONFIG;
+#endif
 #endif
     if (willBind) {
 	hints.ai_flags |= AI_PASSIVE;
